# ai-code-trust-validator

./: .aitrust.yaml  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
ai_trust_validator/: __init__.py  ai_fix.py  analytics.py  api_server.py  benchmark.py  cache.py  cli.py  config.py  fixer.py  lsp_server.py  multi_file.py  multi_lang_validator.py  plugin.py  test_generator.py  validator.py  watcher.py
ai_trust_validator/analyzers/: __init__.py  best_practices.py  hallucination.py  js_hallucination.py  js_security.py  logic.py  security.py
ai_trust_validator/languages/: __init__.py  base.py  javascript_parser.py  python_parser.py
ai_trust_validator/reporters/: __init__.py  html_reporter.py  json_reporter.py  sarif_reporter.py
dashboard/: index.html
jetbrains-plugin/: build.gradle.kts
tests/: test_validator.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
