[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust-validator"
version = "0.1.0"
description = "Automatically validate AI-generated code for security vulnerabilities, logic errors, and best practices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "rudra496"}
]
keywords = ["ai", "code-quality", "security", "validation", "llm", "chatgpt", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "astroid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
aitrust = "ai_trust_validator.cli:main"

[project.urls]
Homepage = "https://github.com/rudra496/ai-code-trust-validator"
Documentation = "https://github.com/rudra496/ai-code-trust-validator#readme"
Repository = "https://github.com/rudra496/ai-code-trust-validator"
Issues = "https://github.com/rudra496/ai-code-trust-validator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trust_validator*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
